--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,20 +13,14 @@
   </div>
 
   <div class="filters projects-container">
-    <div class="project-card">
-      <%= link_to "Landscape design", projects_path(category: "Landscape design") %>
+    <div class="project-card card-1">
+      <%= link_to "Landscape and Interior design", projects_path(category: "Landscape and Interior design") %>
     </div>
-    <div class="project-card">
-      <%= link_to "Urban and Planning design", projects_path(category: "Urban and Planning design") %>
+    <div class="project-card card-2">
+      <%= link_to "Urban planning and Corporaten", projects_path(category: "Urban planning and Corporate") %>
     </div>
-    <div class="project-card">
-      <%= link_to "Interior design", projects_path(category:"Interior design") %>
-    </div>
-    <div class="project-card">
+    <div class="project-card card-3">
       <%= link_to "Events and Festivals", projects_path(category: "Events and Festivals") %>
-    </div>
-    <div class="project-card">
-      <%= link_to "Corporate", projects_path(category: "Corporate") %>
     </div>
   </div>
 
