--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -2,6 +2,6 @@
   <%= f.input :name %>
   <%= f.input :client %>
   <%= f.input :description %>
-  <%= f.input :category, as: :select, collection: ["Landscape design", "Urban and Planning design", "Interior design", "Events and Festivals", "Corporate"]%>
+  <%= f.input :category, as: :select, collection: ["Landscape and Interior design", "Urban planning and Corporate", "Events and Festivals"]%>
   <%= f.submit "Add project", class: "btn btn-primary" %>
 <% end %>
