--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -16,3 +16,12 @@
   color: white;
   margin-top: 30px;
 }
+
+.link-project {
+  color: white;
+  &:hover {
+    color: white;
+    opacity: 0.9;
+    text-decoration: none;
+  }
+}
