--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,6 +19,8 @@
 
 .card-1, .card-2, .card-3 {
   background-size: cover;
+  display: flex;
+  align-items: flex-end;
 }
 
 .card-1 {
@@ -31,4 +33,9 @@
 
 .card-3 {
   background-image: linear-gradient(rgba(226,226,226,0.3), rgba(226,226,226,0.3)), url('card-3.jpg');
+}
+
+.category {
+  font-size: 20px;
+  padding: 16px;
 }
