--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,13 +14,19 @@
 
   <div class="filters projects-container">
     <div class="project-card card-1">
-      <%= link_to "Landscape and Interior design", projects_path(category: "Landscape and Interior design") %>
+      <p class="category">
+        <%= link_to "Landscape and Interior design", projects_path(category: "Landscape and Interior design"), class: "link-project" %>
+      </p>
     </div>
     <div class="project-card card-2">
-      <%= link_to "Urban planning and Corporaten", projects_path(category: "Urban planning and Corporate") %>
+      <p class="category">
+        <%= link_to "Urban planning and Corporaten", projects_path(category: "Urban planning and Corporate"), class: "link-project" %>
+      </p>
     </div>
     <div class="project-card card-3">
-      <%= link_to "Events and Festivals", projects_path(category: "Events and Festivals") %>
+      <p class="category">
+        <%= link_to "Events and Festivals", projects_path(category: "Events and Festivals"), class: "link-project" %>
+      </p>
     </div>
   </div>
 
