added padding navbar

--- a/app/views/shared/_custom-navbar.html.erb
+++ b/app/views/shared/_custom-navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-b fixed-top justify-content-end">
+<div class="navbar navbar-expand-sm navbar-light navbar-b fixed-top justify-content-end p-4">
   <div id="logo"class="d-none logo-left">
     <%= link_to "#", class: "navbar-brand" do %>
       <%= image_tag "Logo.png" %>
